# BuildYourChatgptUsingOllamaFastapi

./: .pylintrc  README.md  contribute.md  main.py  pyproject.toml
.github/workflows/: pylint.yml
static/: index.html
